--- a/tableau.html
+++ b/tableau.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LES TABLEAUX</title>
+    <link rel="stylesheet" href="tableau1.css">
 </head>
-<body bgcolor="palegoldenrod" text="marroon">
+<body>
+    <div id="container">
     <h1 align="center">TABLEAU SIMPLE</h1>
    
     </table> <table border="1" width="60%">
@@ -61,6 +63,6 @@
             <td align="center">Cellule 3</td>
             <td>Cellule 5</td>
         </tr>
-
+    </div>
 </body>
 </html>
